# download-manager-persona-5

backend/: package.json
backend/native/: Cargo.toml
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/Logo/: index.tsx  styles.ts
frontend/src/components/Title/: index.tsx  styles.ts
frontend/src/styles/: GlobalStyle.ts
